gtk4 (4.14.2+ds-1) UNRELEASED; urgency=medium

  * New upstream release
  * Update the packaging to no refer to the ffmpeg experimental backend
    which has been removed upstream now
  * debian/rules:
    - update for the new convert-emoji syntax

  [ Nathan Pratta Teodosio ]
  * debian/rules:
    - Make Bash scripts in installed-tests/gtk-4.0/tools/ executable
      to fix autopkgtests.

  [ Jeremy Bícha ]
  * New upstream release

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 27 Feb 2024 12:03:26 +0100

gtk4 (4.12.5+ds-6) unstable; urgency=medium

  * d/control, d/rules: Reinstate colord integration on 32-bit
  * d/control, d/rules: Reinstate build-time tests on 32-bit
  * d/control, d/tests/build: Prefer pkgconf over pkg-config
  * d/control, d/rules: Make it more obvious that we use the correct
    pkgconf.
    We intentionally compile convert-emoji with the build architecture
    pkgconf, because we need to run it during build, but we do not need
    to install it.
  * d/control, d/rules: Only enable sysprof on architectures that have it.
    See #1067577.

 -- Simon McVittie <smcv@debian.org>  Mon, 25 Mar 2024 14:45:21 +0000

gtk4 (4.12.5+ds-5) unstable; urgency=medium

  * d/rules: Replace deprecated -Ddemos with -Dbuild-demos
  * d/control: Don't build-depend on ffmpeg if we are not going to use it.
    The experimental ffmpeg plugin is only built if selected
    by a build-profile, so put an equivalent condition on the
    build-dependencies.
  * d/control, d/rules: Add a pkg.gtk4.nocolord build-profile.
    This is not a reproducible (or "safe") build profile, because it
    changes the contents of the library rather than merely disabling
    whole binary packages, but it cuts off some long dependency chains
    that can be useful during bootstrapping.
  * Temporarily disable colord integration on 32-bit non-x86.
    For the 64-bit time_t transition. colord is a non-essential feature,